Add navigation bar title

--- a/app/views/movie_details.xml
+++ b/app/views/movie_details.xml
@@ -1,4 +1,6 @@
 <Alloy>
-	<View class="container">
-	</View>
+	<Window class="container" id="movieDetailsWindow">
+		<!-- Add the table view for the things here -->
+		<TableView id="movieDetailsTable"></TableView>
+	</Window>
 </Alloy>
