Added a basic image

--- a/app/views/movie_details.xml
+++ b/app/views/movie_details.xml
@@ -1,6 +1,8 @@
 <Alloy>
-	<Window class="container" id="movieDetailsWindow">
-		<!-- Add the table view for the things here -->
-		<TableView id="movieDetailsTable"></TableView>
-	</Window>
+	<NavigationWindow>
+		<Window class="container" id="movieDetailsWindow">
+			<!-- Add the table view for the things here -->
+			<TableView id="movieDetailsTable"></TableView>
+		</Window>
+	</NavigationWindow>
 </Alloy>
