Add a workable gridview

--- a/app/views/movieGrid.xml
+++ b/app/views/movieGrid.xml
@@ -2,6 +2,10 @@
 	<View id="mainView">
 		<View id="imgContainer">
 			<ImageView id="thumb"/>
+			<View id="thumbTextBlock">
+				<Label id="thumbTitle"></Label>
+				<Label id="releaseYear"></Label>
+			</View>
 		</View>	
 	</View>	
 </Alloy>
