Add modules and error handling

--- a/app/views/movie_details.xml
+++ b/app/views/movie_details.xml
@@ -2,7 +2,7 @@
     <Window id="fgWin">
         <Require type="widget" src="com.prodz.tiflexigrid" id="fg"/>
         <View id="loadingView">
-        	<Label>Loading...</Label>
+        	<Label id="loadingLabel">Loading...</Label>
         </View>
     </Window>
 </Alloy>
